# gsi-acc-job-interview-mini-project

./: CMakeLists.txt  CSVSource.h  DataProvider.h  MainModel.h  MainView.h  MainViewController.h  README.md  RollingAverage.h  example_raw_data.csv  main.cpp
docs/: Mini-Project Description.md
